// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anything query fetches Author 1`] = `
Object {
  "anything": Object {
    "__typename": "Author",
    "books": Array [
      Object {
        "description": "Consequatur incidunt blanditiis sunt repellendus et velit eum sint voluptatibus.",
        "id": "My1Cb29r",
        "title": "Nostrum",
      },
      Object {
        "description": "Consequatur et voluptatem nostrum cupiditate laborum in.",
        "id": "Mi1Cb29r",
        "title": "Sit Et Corporis Laborum",
      },
      Object {
        "description": "Voluptatem inventore ut quisquam fugiat itaque non alias.",
        "id": "MS1Cb29r",
        "title": "Suscipit Animi Qui Impedit",
      },
    ],
    "id": "MS1BdXRob3I=",
    "name": "Lorene Deckow",
  },
}
`;

exports[`anything query fetches Book 1`] = `
Object {
  "anything": Object {
    "__typename": "Book",
    "description": "Voluptatem inventore ut quisquam fugiat itaque non alias.",
    "id": "MS1Cb29r",
    "title": "Suscipit Animi Qui Impedit",
  },
}
`;

exports[`fetches with aliases 1`] = `
Object {
  "author": Object {
    "description": "Cupiditate consequatur et voluptatem nostrum cupiditate laborum.",
    "headline": "Luther Gutmann",
    "id": "Mi1BdXRob3I=",
  },
  "something": Object {
    "description": "Voluptatem inventore ut quisquam fugiat itaque non alias.",
    "externalId": "MS1Cb29r",
    "headline": "Suscipit Animi Qui Impedit",
    "id": "MS1Cb29r",
  },
  "user": Object {
    "description": "Sint voluptatibus deserunt totam quae eos.",
    "headline": "Vivian Feest",
    "id": "MS1Vc2Vy",
  },
}
`;
